Fix and unmute ExponentialHistogramFieldMapperTests.testFormattedDocValues